<resources>
    <string name="app_name">Speed Keyboard</string>
    <string name="t1">a</string>
    <string name="t2">e</string>
    <string name="t3">i</string>
    <string name="t4">s</string>
    <string name="t5">r</string>
    <string name="t6">n</string>
    <string name="shift">SHIFT\ </string>
    <string name="key_"></string>
    <string name="divider">|</string>
    <string name="mode_chars">abc</string>
    <string name="mode_emoji">㋛</string>
    <string name="mode_number">123</string>
    <string name="title_activity_main">MainActivity</string>
</resources>