<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:paddingHorizontal="6dp"
    android:background="@color/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/shift_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shift"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divider"
            android:textColor="@color/white"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/preview_key"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:text="@string/key_"
            android:textColor="@color/white"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divider"
            android:textColor="@color/white"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/preview_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">
        <Button
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/white"
            android:background="@drawable/button_shape_state"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/t1"
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>
        <Button
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/white"
            android:background="@drawable/button_shape_state"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/t2"
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>
        <Button
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/white"
            android:background="@drawable/button_shape_state"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/t3"
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">
        <Button
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/white"
            android:background="@drawable/button_shape_state"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/t4"
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>
        <Button
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/white"
            android:background="@drawable/button_shape_state"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/t5"
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>
        <Button
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/white"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_shape_state"
            android:text="@string/t6"
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"/>
</LinearLayout>